# BgmiGet

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
bgmiget/: __init__.py  bgmiget.py  candle.py  data.py  main.py  persistentdict.py  result.py
bgmiget/sources/: MiKanProject.py  __init__.py  mikanproject.py
